@@ -16,7 +16,7 @@ nobase_dist_data_DATA += \
   RivetGun/falpher-default.params  \
   RivetGun/falppyt-default.params  \
   RivetGun/fherwig-default.params RivetGun/fherwig-qcd.params  \
-  RivetGun/fpythia-default.params  \
+  RivetGun/fpythia-default.params RivetGun/fpythia-hadronic.params \
   RivetGun/charybdisher-default.params  \
   RivetGun/charybdispyt-default.params  \
   RivetGun/lep1.params \
