@@ -19,6 +19,12 @@ libRivetAnalysisStd_la_SOURCES = StdAnalyses.cc \
 libRivetAnalysisStd_la_LDFLAGS = $(AM_LDFLAGS) -L$(FASTJETLIBPATH)
 libRivetAnalysisStd_la_LIBADD = -lCDFConesPlugin -lSISConePlugin -lsiscone
 libRivetAnalysisStd_la_CPPFLAGS = $(AM_CPPFLAGS)
+
 if WITH_ROOT
   libRivetAnalysisStd_la_CPPFLAGS += -DHAVE_ROOT $(ROOTCPPFLAGS) -fpermissive
+endif
+
+if ENABLE_JADE
+  libRivetAnalysisStd_la_CPPFLAGS += -D__HAVE_JADE
+  libRivetAnalysisStd_la_LIBADD += -lJadePlugin
 endif
